사용자 주문내역 fastway/homeway 각각 select 띄우기 완료

--- a/src/main/webapp/resources/css/ui.mypage.css
+++ b/src/main/webapp/resources/css/ui.mypage.css
@@ -1565,7 +1565,7 @@
 .order_wrapper .order_box .order_list .order_listTit .refresh {
 	width: 26px;
 	height: 26px;
-	background: url(../images/mypage/icon_refresh_green.png) no-repeat
+	background: url(https://lubway.s3.ap-northeast-2.amazonaws.com/icon_refresh_green.png) no-repeat
 		center/100%;
 }
 
