--- a/src/main/webapp/resources/css/choice_option.css
+++ b/src/main/webapp/resources/css/choice_option.css
@@ -220,7 +220,7 @@ p[id^=selectStep] {
 	border-top: 2px solid #f6f6f6;
 }
 
-.cart {
+.car {
 	width: 166px;
 	display: inline-block;
 	color: #009223;
