메인 연결 및 여러가지 수정

--- a/src/main/webapp/resources/slick/slick.css
+++ b/src/main/webapp/resources/slick/slick.css
@@ -101,7 +101,8 @@
 }
 .slick-initialized .slick-slide
 {
-    display: block;
+    display: inline-block;
+    text-align: -webkit-center;
 }
 .slick-loading .slick-slide
 {
