--- a/src/main/webapp/resources/css/ui.common.css
+++ b/src/main/webapp/resources/css/ui.common.css
@@ -244,3 +244,8 @@ em {
 .faq_wrapper .faq_contet li.open .fre:after{transform: rotate(135deg);}
 .faq_wrapper .faq_contet li.open .ask_text{opacity:1;}
 
+/* 에러페이지 */
+.error .sub_txt_wrap {}
+.error .sub_txt_wrap .sub_tit_h3 {color:#292929;font-size:28px;font-weight:bold;letter-spacing: -0.05em;padding-bottom:30px;line-height:1.3;text-align:center;}
+.error .sub_txt_wrap .sub_tit_h3:before {background:url('../images/common/img_error.png') no-repeat 0 0; background-size:175px 100px; content:''; display:block; margin:0 auto; margin-bottom:30px; height:100px; width:175px;}
+.error .sub_txt_wrap .sub_txt {text-align:center;font-size:16px;line-height:1.4;color:#999;}
