관리자/매장관리자 매출현황 페이지 수정

--- a/src/main/webapp/resources/css/salesStatus.css
+++ b/src/main/webapp/resources/css/salesStatus.css
@@ -42,8 +42,11 @@
 	width: 300px;
 }
 
-.searchKeyword input[name=searchBtn]{
-
+.num{
+	float: right;
+	padding-top: 11px;
+	margin-right: 5px;
+	
 }
 
 .searchKeyword input[name=searchKeyword]{
