step03 목록보기 / 장바구니&주문하기 위치 변경, 야채 모두 선택 버튼 추가

--- a/src/main/webapp/resources/css/choice_option.css
+++ b/src/main/webapp/resources/css/choice_option.css
@@ -213,11 +213,11 @@ p[id^=selectStep] {
 .menu_view_wrapper .order_btn {
 	display: flex;
 	justify-content: center;
-	width: 85%;
 	background-color: #fff;
 	padding-bottom: 50px;
+	padding-top: 50px;
 	margin-top: -2em;
-	border-top: 2px solid #f6f6f6;
+	border-bottom: 2px solid #f6f6f6;
 }
 
 .car {
