--- a/src/main/webapp/resources/css/sb-admin-2.css
+++ b/src/main/webapp/resources/css/sb-admin-2.css
@@ -1489,6 +1489,12 @@ pre code {
   color: #858796;
 }
 
+.fixed-table-body{
+	width: 100%;
+   	overflow-x: auto;
+   	white-space: nowrap;
+}
+
 .table th,
 .table td {
   padding: 0.75rem;
