아보카도 로딩이미지 주요 페이지에 넣기 완료 / 주문내역 페이징중

--- a/src/main/webapp/resources/css/ui.mypage.css
+++ b/src/main/webapp/resources/css/ui.mypage.css
@@ -1529,6 +1529,15 @@
 	background-color: #e5e5e5
 }
 
+.order_wrapper .order_box .order_list .order_card .status {
+	float: right;
+	font-size: 14px;
+	color: #FFCA01;
+	font-weight: bold;
+	letter-spacing: -0.05em;
+	padding-right: 10px;
+}
+
 .order_wrapper .order_box .order_list .order_card .num {
 	float: right;
 	font-size: 14px;
